--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,27 +1,31 @@
 /*
  * General styles
  */
+a {
+  text-decoration: none;
+}
+
 body,
 html {
-  background-image : "#fff";
+  background-image: "#fff";
   background-repeat: no-repeat;
-  background-size  : cover;
-  font-family      : $fontmain;
-  font-size        : $base-size - 2px;
-  height           : 100vh;
-  overflow         : hidden;
+  background-size: cover;
+  font-family: $fontmain;
+  font-size: $base-size - 2px;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .btn {
-  padding            : 0;
-  border             : none;
-  cursor             : pointer;
-  font-weight        : 700;
-  height             : 30px;
-  line-height        : 30px;
-  -moz-user-select   : none;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  height: 30px;
+  line-height: 30px;
+  -moz-user-select: none;
   -webkit-user-select: none;
-  user-select        : none;
+  user-select: none;
 
   i {
     font-size: $base-size - 3px;
@@ -33,10 +37,10 @@ html {
 .btn-delete,
 .btn-assign {
   background-color: $colormain;
-  color           : $common-text-color;
+  color: $common-text-color;
 
   &:hover {
-    color           : $common-text-color;
+    color: $common-text-color;
     background-color: darken($colormain, 5);
   }
 }
@@ -75,17 +79,17 @@ html {
 
 .content-container {
   .title {
-    text-align    : center;
+    text-align: center;
     text-transform: uppercase;
-    font-weight   : bold;
-    font-size     : $base-size + 4px;
-    margin-top    : 15px;
-    color         : $colormain;
+    font-weight: bold;
+    font-size: $base-size + 4px;
+    margin-top: 15px;
+    color: $colormain;
   }
 
   .content {
-    margin            : 15px 30px;
-    box-shadow        : 2px 2px 4px 0 $box-shadow-color;
+    margin: 15px 30px;
+    box-shadow: 2px 2px 4px 0 $box-shadow-color;
     -webkit-box-shadow: 2px 2px 4px 0 $box-shadow-color;
   }
 }
@@ -94,24 +98,24 @@ html {
   .modal-dialog {
     .modal-content {
       .modal-header {
-        padding         : 0 10px;
-        height          : 35px;
+        padding: 0 10px;
+        height: 35px;
         background-color: $colormain;
-        color           : $common-text-color;
+        color: $common-text-color;
 
         .modal-title {
           line-height: 35px;
           font-weight: 500;
-          font-size  : $base-size + 1px;
+          font-size: $base-size + 1px;
         }
 
         .btn-close {
           position: absolute;
-          color   : $common-text-color;
+          color: $common-text-color;
 
           i {
             line-height: 35px;
-            font-size  : $base-size + 2px;
+            font-size: $base-size + 2px;
           }
         }
       }
@@ -120,6 +124,6 @@ html {
 }
 
 .container {
-  padding-left : 15px;
+  padding-left: 15px;
   padding-right: 15px;
 }
