--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -20,4 +20,25 @@
             font-size: $base-size + 1px;
         }
     }
+    .languages {
+        .welcome {
+            margin-right: 10px;
+        }
+        .language-en {
+            margin-left: 10px;
+            margin-right: 15px;
+            cursor: pointer;
+            &.active {
+                opacity: 1;
+                color: #30d663;
+            }
+        }
+        .language-vi {
+            cursor: pointer;
+            &.active {
+                opacity: 1;
+                color: orange;
+            }
+        }
+    }
 }
