--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -33,6 +33,10 @@
   right: -15px;
 }
 
+.slick-disabled {
+  display: none;
+}
+
 .section-share {
   &.section-specialty {
     background: #f5f5f5;
@@ -70,7 +74,7 @@
         }
 
         &.section-outstanding-doctor {
-          background-image: url("../../assets/outstanding-doctor/outstanding-doctor.jpeg");
+          // background-image: url("../../assets/outstanding-doctor/outstanding-doctor.jpeg");
           width: 120px;
           height: 120px;
           border-radius: 50%;
