--- a/src/containers/DetailDoctorPage/DetailDoctor.scss
+++ b/src/containers/DetailDoctorPage/DetailDoctor.scss
@@ -22,6 +22,14 @@
       }
     }
   }
+  .schedule-doctor {
+    padding-block: 10px;
+    min-height: 200px;
+    .content-left {
+    }
+    .content-right {
+    }
+  }
   .detail-infor-doctor {
     border-top: 1px solid#ddd;
     border-bottom: 1px solid#ddd;
