--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -66,7 +66,7 @@
         background-color: #eee;
 
         &.section-specialty {
-          background-image: url("../../assets/specialty/co-xuong-khop.jpeg");
+          // background-image: url("../../assets/specialty/co-xuong-khop.jpeg");
         }
 
         &.section-medical-facility {
